# clawaudit

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: ARCHITECTURE.md  AUDIT_RULES.md  FRONTEND_PLAN.md  HOW_IT_WORKS.md  ROADMAP.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/support/: page.tsx
frontend/src/components/dashboard/: audit-dashboard.tsx  score-ring.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  tabs.tsx
frontend/src/lib/: api.ts  fallback-report.ts  types.ts
frontend/tests/: web-smoke.mjs
src/clawaudit/: api.py  cli.py  history.py  models.py  reporting.py  scanner.py
